--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    
+   <section>
+        <div>
+            <h1>Welcome To</h1>
+            <h1>Maverik Akik World</h1>
+            <h3>Work for a happier present and hope for a better future</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusamus neque in dignissimos modi delectus maiores hic laborum corrupti voluptatum. Aliquam vitae cumque consequatur molestiae dignissimos, ratione cum eligendi deserunt voluptas dolorum sit numquam eius sunt delectus, beatae est doloribus quis nobis fugiat et rerum veniam impedit officiis. Obcaecati beatae architecto sed sequi repellat pariatur veniam eos sint. Voluptatem, 
+            </p>
+        </div>
+        <div>
+            <img src="images/my-bg.png" alt="">
+        </div>
+   </section> 
 </body>
 </html>
