--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=q, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
+
 <body>
-   <section>
-        <div>
+    <section class="first-section">
+        <div class="half-width">
             <h1>Welcome To</h1>
-            <h1>Maverik Akik World</h1>
-            <h3>Work for a happier present and hope for a better future</h3>
+            <h1><span class="orange-color">Maverik Akik</span> World</h1>
+            <h4>Work for a happier present and hope for a better future</h4>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusamus neque in dignissimos modi delectus maiores hic laborum corrupti voluptatum. Aliquam vitae cumque consequatur molestiae dignissimos, ratione cum eligendi deserunt voluptas dolorum sit numquam eius sunt delectus, beatae est doloribus quis nobis fugiat et rerum veniam impedit officiis. Obcaecati beatae architecto sed sequi repellat pariatur veniam eos sint. Voluptatem, 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusamus neque in dignissimos modi
+                delectus maiores hic laborum corrupti voluptatum. Aliquam vitae cumque consequatur molestiae
+                dignissimos, ratione cum eligendi deserunt voluptas dolorum sit numquam eius sunt delectus, beatae est
+                doloribus quis nobis fugiat et rerum veniam impedit officiis. Obcaecati beatae architecto sed sequi
+                repellat pariatur veniam eos sint. Voluptatem,
             </p>
+            <a class="hire-button" target="_blank" href="https://github.com/sartajdev007">Hire Me</a>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/my-bg.png" alt="">
         </div>
-   </section> 
+    </section>
 </body>
+
 </html>
