--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
+    <section class="second-section">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h4>Become a web developer</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus saepe voluptatum ratione! Sint
+                sapiente, ullam odio quibusdam eligendi deserunt delectus reprehenderit numquam incidunt magni quo
+                magnam fugit et quod accusantium?</p>
+            <a class="hire-button" target="_blank" href="https://github.com/sartajdev007">Download Resume</a>
+        </div>
+    </section>
+    <section class="exp-section">
+        <h1>Experiesnce</h1>
+    </section>
 </body>
 
 </html>
