--- a/index.html
+++ b/index.html
@@ -45,8 +45,33 @@
         </div>
     </section>
     <section class="exp-section">
-        <h1>Experiesnce</h1>
+        <h1>Experience</h1>
+        <div class="exp-area">
+            <div class="exp-item" id="red-border">
+                <h2>Data Entry Operator</h2>
+                <h4 class="orange-color">2020-2021|Fiverr Seller</h4>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis culpa natus accusamus ut
+                    repellendus
+                    tempore ipsa odit fugit ipsam veritatis.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Laborum, rem.tempore ipsa odit fugit ipsam veritatis.Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit.
+                </p>
+            </div>
+            <div class="exp-item" id="blue-border">
+                <h2>Junior Web Developer</h2>
+                <h4 class="orange-color">2022-Present|Programming Hero Learner</h4>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis culpa natus accusamus ut
+                    repellendus
+                    tempore ipsa odit fugit ipsam veritati.Lorem ipsum dolor sit, amet consectetur adipisicing
+                </p>
+            </div>
+        </div>
     </section>
 </body>
+<footer>
+    <p> © Maverik Akik 2023, a Programming Hero initiative.</p>
+</footer>
 
 </html>
